// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomiseLease /> renders correctly 1`] = `
<div
  className="pdp--sidebar"
  data-uitestid="details-page_customise-lease-container_sidebar"
>
  <h2
    className="heading -black -xlarge"
  >
    Customise Your Lease
  </h2>
  <span
    className="heading -black -regular"
  >
    Is this for you, or for your business?
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-Personal"
      disabled={false}
      id="Personal"
      name="leaseType"
      onChange={[Function]}
      type="radio"
      value="Personal"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_Personal"
      htmlFor="Personal"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_Personal"
      >
        Personal
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-Business"
      disabled={false}
      id="Business"
      name="leaseType"
      onChange={[Function]}
      type="radio"
      value="Business"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_Business"
      htmlFor="Business"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_Business"
      >
        Business
      </span>
    </label>
  </div>
  <span
    className="heading -black -regular"
  >
    How many miles will you be driving a year?
    <br />
    <span
      className="text -b -regular -orange"
    >
      8000
       Miles
    </span>
  </span>
  <label
    className="sliding-input"
    data-uitestid="details-page_sliding-input_mileage-slider"
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    style={
      Object {
        "--length": 3,
        "--value": 1,
      }
    }
  >
    <input
      className="sliding-input-control visually-hidden"
      disabled={false}
      max={3}
      min={1}
      onChange={[Function]}
      step={1}
      type="range"
      value={1}
    />
    <div
      className="sliding-input-fill"
    >
      <div
        className="sliding-input-value"
      />
    </div>
    <div
      className="sliding-input-handle"
    />
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_6K"
    >
      6K
    </div>
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_8K"
    >
      8K
    </div>
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_10K"
    >
      10K
    </div>
  </label>
  <span
    className="heading -black -regular"
  >
    How long do you want your vehicle for?
    <br />
    <span
      className="text -b -regular -orange"
    >
      24 Months - 2 Years
    </span>
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-24, 36"
      disabled={false}
      id="24, 36"
      name="terms"
      onChange={[Function]}
      type="radio"
      value="24, 36"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_24, 36"
      htmlFor="24, 36"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_24, 36"
      >
        24, 36
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-77"
      disabled={false}
      id="77"
      name="terms"
      onChange={[Function]}
      type="radio"
      value="77"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_77"
      htmlFor="77"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_77"
      >
        77
      </span>
    </label>
  </div>
  <span
    className="heading -black -regular"
  >
    How much do you want to pay upfront?
    <i
      className="icon md hydrated -ml-100 -info-modal -teal"
      onClick={[Function]}
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256,56C145.72,56,56,145.72,56,256s89.72,200,200,200,200-89.72,200-200S366.28,56,256,56Zm0,82a26,26,0,1,1-26,26A26,26,0,0,1,256,138Zm48,226H216a16,16,0,0,1,0-32h28V244H228a16,16,0,0,1,0-32h32a16,16,0,0,1,16,16V332h28a16,16,0,0,1,0,32Z"
        />
      </svg>
    </i>
    <br />
    <span
      className="text -b -regular -orange"
    >
      1 Months - £605.95 inc. VAT
    </span>
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={true}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-1"
      disabled={false}
      id="1"
      name="upfront"
      onChange={[Function]}
      type="radio"
      value="1"
    />
    <label
      className="choice-box -active"
      data-uitestid="details-page_choice-boxes-v2_choice-box_1"
      htmlFor="1"
      style={
        Object {
          "backgroundColor": "null",
        }
      }
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_1"
      >
        1
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-3"
      disabled={false}
      id="3"
      name="upfront"
      onChange={[Function]}
      type="radio"
      value="3"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_3"
      htmlFor="3"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_3"
      >
        3
      </span>
    </label>
  </div>
  <span
    className="heading -flex-h -black -regular"
  >
    Vehicle Options
    <span
      className="text -b -regular -orange"
    >
      14-21 Day Delivery
    </span>
  </span>
  <div
    className="custom-select-container -fullwidth"
    data-testid="colour-selector"
    data-uitestid="details-page_custom-lease-select_colour"
    onClick={[Function]}
  >
    <div
      className="selected-text"
    >
      <div
        className="placeholder-top"
      >
        Select Paint Colour:
      </div>
      Solid - Polar white
    </div>
    <span
      className="icon select--chevron"
    >
      <i
        className="icon -stroke -dark"
      >
        <svg
          height="1em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <polyline
            points="112 184 256 328 400 184"
            style={
              Object {
                "fill": "none",
                "stroke": "var(--class-color)",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 48,
              }
            }
          />
        </svg>
      </i>
    </span>
  </div>
  <div
    className="custom-select-container -fullwidth"
    data-testid="trim-selector"
    data-uitestid="details-page_custom-lease-select_trim"
    onClick={[Function]}
  >
    <div
      className="selected-text"
    >
      <div
        className="placeholder-top"
      >
        Select Interior:
      </div>
      
    </div>
    <span
      className="icon select--chevron"
    >
      <i
        className="icon -stroke -dark"
      >
        <svg
          height="1em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <polyline
            points="112 184 256 328 400 184"
            style={
              Object {
                "fill": "none",
                "stroke": "var(--class-color)",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 48,
              }
            }
          />
        </svg>
      </i>
    </span>
  </div>
  <span
    className="heading -black -regular"
  >
    Add Vanarama Service Plan (Our Maintenance Package):
    <span
      className="text -b -ml-100 -regular -orange"
    >
      £61.75 Per Month inc. VAT
    </span>
  </span>
  <a
    className="link -primary -small -plain"
    data-uitestid="details-page_customise-lease_what-included"
    onClick={[Function]}
  >
    See What's Included
  </a>
  <div
    className="formgroup"
  >
    <div
      className="formgroup--content"
    >
      <div
        className="radio"
      >
        <input
          className="radio--native visually-hidden"
          defaultChecked={false}
          disabled={false}
          id="maintenanceCost"
          name="maintenance"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="radio--label"
          htmlFor="maintenanceCost"
        >
          <span
            className="text -regular -darker"
          >
            YES, I want peace of mind and to keep things hassle-free
          </span>
        </label>
      </div>
      <div
        className="radio"
      >
        <input
          className="radio--native visually-hidden"
          defaultChecked={true}
          disabled={false}
          id="leaseCost"
          name="maintenance"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="radio--label"
          htmlFor="leaseCost"
        >
          <span
            className="text -regular -darker"
          >
            NO, I want to worry about sorting the maintenance costs myself
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    className="button-wrapper"
  >
    <button
      className="button -reset -teal -regular -clear"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -teal"
        >
          <svg
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M320,146s24.36-12-64-12A160,160,0,1,0,416,294"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeMiterlimit": 10,
                  "strokeWidth": 32,
                }
              }
            />
            <polyline
              points="256 58 336 138 256 218"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
          </svg>
        </i>
        Reset Best Price
      </div>
    </button>
  </div>
  <div
    className="pdp--order-summary"
  >
    <p
      className="heading -inherit -primary -small"
    >
      ORDER SUMMARY
    </p>
    <section
      className="structured-list -compact"
    >
      <div
        className="structured-list-tbody"
      >
        <div
          className="structured-list-row orange"
          data-abtestid="product-page_structured-list_processing-fee"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-abtestid="product-page_structured-list_processing-fee-label"
            data-testid="data_id-0-Processing Fee:"
            data-uitestid="details-page_order-summary_Processing Fee:"
          >
            Processing Fee:
          </div>
          <div
            className="structured-list-td"
            data-abtestid="product-page_structured-list_processing-fee-value"
            data-testid="processingFee"
          >
            FREE
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-1-Initial Payment:"
            data-uitestid="details-page_order-summary_Initial Payment:"
          >
            Initial Payment:
          </div>
          <div
            className="structured-list-td"
            data-testid="initialPayment"
          >
            £605.95 (inc. VAT)
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-2-Contract Length:"
            data-uitestid="details-page_order-summary_Contract Length:"
          >
            Contract Length:
          </div>
          <div
            className="structured-list-td"
            data-testid="contractLengthile"
          >
            24 months
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-3-Annual Mileage:"
            data-uitestid="details-page_order-summary_Annual Mileage:"
          >
            Annual Mileage:
          </div>
          <div
            className="structured-list-td"
            data-testid="annualMileage"
          >
            8000 miles
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-4-Vanarama Service Plan:"
            data-uitestid="details-page_order-summary_Vanarama Service Plan:"
          >
            Vanarama Service Plan:
          </div>
          <div
            className="structured-list-td"
            data-testid="maintenance"
          >
            No
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-5-Colour:"
            data-uitestid="details-page_order-summary_Colour:"
          >
            Colour:
          </div>
          <div
            className="structured-list-td"
            data-testid="colour"
          >
            Solid - Polar white
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-7-Stock:"
            data-uitestid="details-page_order-summary_Stock:"
          >
            Stock:
          </div>
          <div
            className="structured-list-td"
            data-testid="stock"
          >
            14-21 Day Delivery
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-8-Warranty:"
            data-uitestid="details-page_order-summary_Warranty:"
          >
            Warranty:
          </div>
          <div
            className="structured-list-td"
            data-testid="warranty"
          >
            undefined Years Manufacturer And undefined Miles
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-9-Road Tax:"
            data-uitestid="details-page_order-summary_Road Tax:"
          >
            Road Tax:
          </div>
          <div
            className="structured-list-td"
            data-testid="roadTax"
          >
            INCLUDED
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-10-Redundancy & Life Event Cover:"
            data-uitestid="details-page_order-summary_Redundancy & Life Event Cover:"
          >
            Redundancy & Life Event Cover:
          </div>
          <div
            className="structured-list-td"
            data-testid="lifeEventCover"
          >
            FREE
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-11-Delivery:"
            data-uitestid="details-page_order-summary_Delivery:"
          >
            Delivery:
          </div>
          <div
            className="structured-list-td"
            data-testid="delivery"
          >
            FREE
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="lease-scanner--sticky-wrap start-screen"
    style={
      Object {
        "opacity": "1",
      }
    }
  >
    <div
      className="lease-scanner"
      style={
        Object {
          "--lease-scanner-height": "6.75rem",
        }
      }
    >
      <div
        className="content-wrapper"
      >
        <div
          className="price -xlarge -black"
        >
          <div
            className="price--inner"
            data-uitestid="details-page_price_price-inner"
          >
            <span
              className="price--sub"
            >
              £
            </span>
            <span
              className="price--pounds"
            >
              POA
            </span>
          </div>
        </div>
        <div
          className="heading headingText -pt-100 -darker -small"
          data-uitestid="details-page_button_PM inc. VAT"
        >
          PM inc. VAT
        </div>
      </div>
      <div
        className="button-wrapper"
      >
        <button
          className="button -fullwidth -teal -regular -solid"
          data-uitestid="details-page_button_order-now"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "null",
            }
          }
        >
          <div
            className="button--inner"
          >
            Order Now
          </div>
        </button>
        <div
          className="-eta"
        >
          <i
            className="icon -orange -small"
          >
            <svg
              height="1em"
              viewBox="0 0 17.02 15.75"
              width="1em"
            >
              <path
                d="M14.68,4.26c-1.1-1.11-2.57-1.78-4.13-1.89V1.32h0.78c0.26,0,0.48-0.22,0.48-0.48 c0-0.26-0.21-0.48-0.48-0.48H8.81c-0.26,0-0.48,0.22-0.48,0.48c0,0.26,0.21,0.48,0.48,0.48h0.78v1.05 C8.3,2.46,7.07,2.94,6.06,3.74C5.73,4,5.42,4.28,5.15,4.6C4.98,4.8,5.01,5.11,5.22,5.27c0.2,0.16,0.49,0.14,0.66-0.05 c0.23-0.27,0.49-0.52,0.78-0.74c0.97-0.77,2.18-1.19,3.42-1.18c3.07,0,5.56,2.49,5.56,5.56c0,3.07-2.49,5.56-5.56,5.56 c-2.26,0-4.29-1.37-5.14-3.45c-0.1-0.24-0.38-0.36-0.62-0.26s-0.36,0.38-0.26,0.62c1.36,3.33,5.17,4.93,8.5,3.56 c3.33-1.36,4.93-5.17,3.56-8.5C15.77,5.6,15.29,4.87,14.68,4.26L14.68,4.26z"
              />
              <path
                d="M6.98,6.07c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H0.89c-0.26,0-0.48,0.21-0.48,0.48 s0.21,0.48,0.48,0.48H6.5C6.76,6.55,6.98,6.33,6.98,6.07L6.98,6.07z"
              />
              <path
                d="M6.98,8.02c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H1.65c-0.26,0-0.48,0.21-0.48,0.48 c0,0.26,0.21,0.48,0.48,0.48H6.5C6.76,8.5,6.98,8.28,6.98,8.02L6.98,8.02z"
              />
              <path
                d="M6.98,9.97c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H2.59c-0.26,0-0.48,0.21-0.48,0.48 s0.21,0.48,0.48,0.48H6.5C6.76,10.45,6.98,10.24,6.98,9.97L6.98,9.97z"
              />
              <path
                d="M13.47,6.86c0.22-0.2,0.24-0.54,0.05-0.76s-0.54-0.24-0.76-0.05c-0.01,0.01-0.02,0.02-0.03,0.02 L9.82,8.81l-0.86-0.9C8.75,7.7,8.41,7.7,8.2,7.91c-0.21,0.2-0.21,0.54-0.01,0.75l1.6,1.67L13.47,6.86z"
              />
            </svg>
          </i>
          <span
            className="text -small -orange"
          >
            In Under 3 Minutes
          </span>
        </div>
      </div>
      <div />
      <div
        style={
          Object {
            "height": "1rem",
          }
        }
      >
        <div
          className="text -small -darker"
        >
          <a
            className="link InfinityNumber clickable -primary -small -plain"
            href="tel:+441442838195"
          >
            Call 01442 838 195
          </a>
           
          |
           
          <a
            className="link -primary -small -plain"
            onClick={[Function]}
          >
            Request a Call Back
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CustomiseLease /> renders correctly 2`] = `
<div
  className="pdp--sidebar"
  data-uitestid="details-page_customise-lease-container_sidebar"
>
  <h2
    className="heading -black -xlarge"
  >
    Customise Your Lease
  </h2>
  <span
    className="heading -black -regular"
  >
    Is this for you, or for your business?
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-Personal"
      disabled={false}
      id="Personal"
      name="leaseType"
      onChange={[Function]}
      type="radio"
      value="Personal"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_Personal"
      htmlFor="Personal"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_Personal"
      >
        Personal
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-Business"
      disabled={false}
      id="Business"
      name="leaseType"
      onChange={[Function]}
      type="radio"
      value="Business"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_Business"
      htmlFor="Business"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_Business"
      >
        Business
      </span>
    </label>
  </div>
  <span
    className="heading -black -regular"
  >
    How many miles will you be driving a year?
    <br />
    <span
      className="text -b -regular -orange"
    >
      8000
       Miles
    </span>
  </span>
  <label
    className="sliding-input"
    data-uitestid="details-page_sliding-input_mileage-slider"
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    style={
      Object {
        "--length": 3,
        "--value": 1,
      }
    }
  >
    <input
      className="sliding-input-control visually-hidden"
      disabled={false}
      max={3}
      min={1}
      onChange={[Function]}
      step={1}
      type="range"
      value={1}
    />
    <div
      className="sliding-input-fill"
    >
      <div
        className="sliding-input-value"
      />
    </div>
    <div
      className="sliding-input-handle"
    />
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_6K"
    >
      6K
    </div>
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_8K"
    >
      8K
    </div>
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_10K"
    >
      10K
    </div>
  </label>
  <span
    className="heading -black -regular"
  >
    How long do you want your vehicle for?
    <br />
    <span
      className="text -b -regular -orange"
    >
      24 Months - 2 Years
    </span>
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-24, 36"
      disabled={false}
      id="24, 36"
      name="terms"
      onChange={[Function]}
      type="radio"
      value="24, 36"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_24, 36"
      htmlFor="24, 36"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_24, 36"
      >
        24, 36
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-77"
      disabled={false}
      id="77"
      name="terms"
      onChange={[Function]}
      type="radio"
      value="77"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_77"
      htmlFor="77"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_77"
      >
        77
      </span>
    </label>
  </div>
  <span
    className="heading -black -regular"
  >
    How much do you want to pay upfront?
    <i
      className="icon md hydrated -ml-100 -info-modal -teal"
      onClick={[Function]}
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256,56C145.72,56,56,145.72,56,256s89.72,200,200,200,200-89.72,200-200S366.28,56,256,56Zm0,82a26,26,0,1,1-26,26A26,26,0,0,1,256,138Zm48,226H216a16,16,0,0,1,0-32h28V244H228a16,16,0,0,1,0-32h32a16,16,0,0,1,16,16V332h28a16,16,0,0,1,0,32Z"
        />
      </svg>
    </i>
    <br />
    <span
      className="text -b -regular -orange"
    >
      1 Months - £605.95 inc. VAT
    </span>
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={true}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-1"
      disabled={false}
      id="1"
      name="upfront"
      onChange={[Function]}
      type="radio"
      value="1"
    />
    <label
      className="choice-box -active"
      data-uitestid="details-page_choice-boxes-v2_choice-box_1"
      htmlFor="1"
      style={
        Object {
          "backgroundColor": "null",
        }
      }
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_1"
      >
        1
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-3"
      disabled={false}
      id="3"
      name="upfront"
      onChange={[Function]}
      type="radio"
      value="3"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_3"
      htmlFor="3"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_3"
      >
        3
      </span>
    </label>
  </div>
  <span
    className="heading -flex-h -black -regular"
  >
    Vehicle Options
    <span
      className="text -b -regular -orange"
    >
      14-21 Day Delivery
    </span>
  </span>
  <div
    className="custom-select-container -fullwidth"
    data-testid="colour-selector"
    data-uitestid="details-page_custom-lease-select_colour"
    onClick={[Function]}
  >
    <div
      className="selected-text"
    >
      <div
        className="placeholder-top"
      >
        Select Paint Colour:
      </div>
      Solid - Polar white
    </div>
    <span
      className="icon select--chevron"
    >
      <i
        className="icon -stroke -dark"
      >
        <svg
          height="1em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <polyline
            points="112 184 256 328 400 184"
            style={
              Object {
                "fill": "none",
                "stroke": "var(--class-color)",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 48,
              }
            }
          />
        </svg>
      </i>
    </span>
  </div>
  <div
    className="custom-select-container -fullwidth"
    data-testid="trim-selector"
    data-uitestid="details-page_custom-lease-select_trim"
    onClick={[Function]}
  >
    <div
      className="selected-text"
    >
      <div
        className="placeholder-top"
      >
        Select Interior:
      </div>
      
    </div>
    <span
      className="icon select--chevron"
    >
      <i
        className="icon -stroke -dark"
      >
        <svg
          height="1em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <polyline
            points="112 184 256 328 400 184"
            style={
              Object {
                "fill": "none",
                "stroke": "var(--class-color)",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 48,
              }
            }
          />
        </svg>
      </i>
    </span>
  </div>
  <span
    className="heading -black -regular"
  >
    Add Vanarama Service Plan (Our Maintenance Package):
    <span
      className="text -b -ml-100 -regular -orange"
    >
      £61.75 Per Month inc. VAT
    </span>
  </span>
  <a
    className="link -primary -small -plain"
    data-uitestid="details-page_customise-lease_what-included"
    onClick={[Function]}
  >
    See What's Included
  </a>
  <div
    className="formgroup"
  >
    <div
      className="formgroup--content"
    >
      <div
        className="radio"
      >
        <input
          className="radio--native visually-hidden"
          defaultChecked={false}
          disabled={false}
          id="maintenanceCost"
          name="maintenance"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="radio--label"
          htmlFor="maintenanceCost"
        >
          <span
            className="text -regular -darker"
          >
            YES, I want peace of mind and to keep things hassle-free
          </span>
        </label>
      </div>
      <div
        className="radio"
      >
        <input
          className="radio--native visually-hidden"
          defaultChecked={true}
          disabled={false}
          id="leaseCost"
          name="maintenance"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="radio--label"
          htmlFor="leaseCost"
        >
          <span
            className="text -regular -darker"
          >
            NO, I want to worry about sorting the maintenance costs myself
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    className="button-wrapper"
  >
    <button
      className="button -reset -teal -regular -clear"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -teal"
        >
          <svg
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M320,146s24.36-12-64-12A160,160,0,1,0,416,294"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeMiterlimit": 10,
                  "strokeWidth": 32,
                }
              }
            />
            <polyline
              points="256 58 336 138 256 218"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
          </svg>
        </i>
        Reset Best Price
      </div>
    </button>
  </div>
  <div
    className="pdp--order-summary"
  >
    <p
      className="heading -inherit -primary -small"
    >
      ORDER SUMMARY
    </p>
    <section
      className="structured-list -compact"
    >
      <div
        className="structured-list-tbody"
      >
        <div
          className="structured-list-row orange"
          data-abtestid="product-page_structured-list_processing-fee"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-abtestid="product-page_structured-list_processing-fee-label"
            data-testid="data_id-0-Processing Fee:"
            data-uitestid="details-page_order-summary_Processing Fee:"
          >
            Processing Fee:
          </div>
          <div
            className="structured-list-td"
            data-abtestid="product-page_structured-list_processing-fee-value"
            data-testid="processingFee"
          >
            FREE
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-1-Initial Payment:"
            data-uitestid="details-page_order-summary_Initial Payment:"
          >
            Initial Payment:
          </div>
          <div
            className="structured-list-td"
            data-testid="initialPayment"
          >
            £605.95 (inc. VAT)
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-2-Contract Length:"
            data-uitestid="details-page_order-summary_Contract Length:"
          >
            Contract Length:
          </div>
          <div
            className="structured-list-td"
            data-testid="contractLengthile"
          >
            24 months
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-3-Annual Mileage:"
            data-uitestid="details-page_order-summary_Annual Mileage:"
          >
            Annual Mileage:
          </div>
          <div
            className="structured-list-td"
            data-testid="annualMileage"
          >
            8000 miles
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-4-Vanarama Service Plan:"
            data-uitestid="details-page_order-summary_Vanarama Service Plan:"
          >
            Vanarama Service Plan:
          </div>
          <div
            className="structured-list-td"
            data-testid="maintenance"
          >
            No
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-5-Colour:"
            data-uitestid="details-page_order-summary_Colour:"
          >
            Colour:
          </div>
          <div
            className="structured-list-td"
            data-testid="colour"
          >
            Solid - Polar white
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-7-Stock:"
            data-uitestid="details-page_order-summary_Stock:"
          >
            Stock:
          </div>
          <div
            className="structured-list-td"
            data-testid="stock"
          >
            14-21 Day Delivery
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-8-Warranty:"
            data-uitestid="details-page_order-summary_Warranty:"
          >
            Warranty:
          </div>
          <div
            className="structured-list-td"
            data-testid="warranty"
          >
            undefined Years Manufacturer And undefined Miles
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-9-Road Tax:"
            data-uitestid="details-page_order-summary_Road Tax:"
          >
            Road Tax:
          </div>
          <div
            className="structured-list-td"
            data-testid="roadTax"
          >
            INCLUDED
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-10-Redundancy & Life Event Cover:"
            data-uitestid="details-page_order-summary_Redundancy & Life Event Cover:"
          >
            Redundancy & Life Event Cover:
          </div>
          <div
            className="structured-list-td"
            data-testid="lifeEventCover"
          >
            FREE
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-11-Delivery:"
            data-uitestid="details-page_order-summary_Delivery:"
          >
            Delivery:
          </div>
          <div
            className="structured-list-td"
            data-testid="delivery"
          >
            FREE
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="lease-scanner--sticky-wrap start-screen"
    style={
      Object {
        "opacity": "1",
      }
    }
  >
    <div
      className="lease-scanner"
      style={
        Object {
          "--lease-scanner-height": "6.75rem",
        }
      }
    >
      <div
        className="content-wrapper"
      >
        <div
          className="price -xlarge -black"
        >
          <div
            className="price--inner"
            data-uitestid="details-page_price_price-inner"
          >
            <span
              className="price--sub"
            >
              £
            </span>
            <span
              className="price--pounds"
              data-uitestid="details-page_price_span_pounds"
            >
              605
            </span>
            <span
              className="price--sub"
              data-uitestid="details-page_price_span_sub"
            >
              .
              95
            </span>
          </div>
        </div>
        <div
          className="heading headingText -pt-100 -darker -small"
          data-uitestid="details-page_button_PM inc. VAT"
        >
          PM inc. VAT
        </div>
      </div>
      <div
        className="button-wrapper"
      >
        <button
          className="button -fullwidth -teal -regular -solid"
          data-uitestid="details-page_button_order-now"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "null",
            }
          }
        >
          <div
            className="button--inner"
          >
            Order Now
          </div>
        </button>
        <div
          className="-eta"
        >
          <i
            className="icon -orange -small"
          >
            <svg
              height="1em"
              viewBox="0 0 17.02 15.75"
              width="1em"
            >
              <path
                d="M14.68,4.26c-1.1-1.11-2.57-1.78-4.13-1.89V1.32h0.78c0.26,0,0.48-0.22,0.48-0.48 c0-0.26-0.21-0.48-0.48-0.48H8.81c-0.26,0-0.48,0.22-0.48,0.48c0,0.26,0.21,0.48,0.48,0.48h0.78v1.05 C8.3,2.46,7.07,2.94,6.06,3.74C5.73,4,5.42,4.28,5.15,4.6C4.98,4.8,5.01,5.11,5.22,5.27c0.2,0.16,0.49,0.14,0.66-0.05 c0.23-0.27,0.49-0.52,0.78-0.74c0.97-0.77,2.18-1.19,3.42-1.18c3.07,0,5.56,2.49,5.56,5.56c0,3.07-2.49,5.56-5.56,5.56 c-2.26,0-4.29-1.37-5.14-3.45c-0.1-0.24-0.38-0.36-0.62-0.26s-0.36,0.38-0.26,0.62c1.36,3.33,5.17,4.93,8.5,3.56 c3.33-1.36,4.93-5.17,3.56-8.5C15.77,5.6,15.29,4.87,14.68,4.26L14.68,4.26z"
              />
              <path
                d="M6.98,6.07c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H0.89c-0.26,0-0.48,0.21-0.48,0.48 s0.21,0.48,0.48,0.48H6.5C6.76,6.55,6.98,6.33,6.98,6.07L6.98,6.07z"
              />
              <path
                d="M6.98,8.02c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H1.65c-0.26,0-0.48,0.21-0.48,0.48 c0,0.26,0.21,0.48,0.48,0.48H6.5C6.76,8.5,6.98,8.28,6.98,8.02L6.98,8.02z"
              />
              <path
                d="M6.98,9.97c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H2.59c-0.26,0-0.48,0.21-0.48,0.48 s0.21,0.48,0.48,0.48H6.5C6.76,10.45,6.98,10.24,6.98,9.97L6.98,9.97z"
              />
              <path
                d="M13.47,6.86c0.22-0.2,0.24-0.54,0.05-0.76s-0.54-0.24-0.76-0.05c-0.01,0.01-0.02,0.02-0.03,0.02 L9.82,8.81l-0.86-0.9C8.75,7.7,8.41,7.7,8.2,7.91c-0.21,0.2-0.21,0.54-0.01,0.75l1.6,1.67L13.47,6.86z"
              />
            </svg>
          </i>
          <span
            className="text -small -orange"
          >
            In Under 3 Minutes
          </span>
        </div>
      </div>
      <div />
      <div
        style={
          Object {
            "height": "1rem",
          }
        }
      >
        <div
          className="text -small -darker"
        >
          <a
            className="link InfinityNumber clickable -primary -small -plain"
            href="tel:+441442838195"
          >
            Call 01442 838 195
          </a>
           
          |
           
          <a
            className="link -primary -small -plain"
            onClick={[Function]}
          >
            Request a Call Back
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
